# ohtu

./: .gitignore  .pre-commit-config.yaml  README.md
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_statistics.py  season_manager.py  season_reader.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/login/src/: app.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: ostos.py  ostoskori.py  tuote.py
viikko4/verkkokauppa/: README.md
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: .pylintrc  README.md  kps_web.py  pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py  kps_app.py  kps_engine.py  kps_logic.py  kps_types.py  tekoaly_parannettu.py  tuomari.py  web_ui.py
viikko7/kivi-paperi-sakset/src/frontend/: __main__.py  app.py  routes.py  state.py
viikko7/kivi-paperi-sakset/src/frontend/static/css/: styles.css
viikko7/kivi-paperi-sakset/src/frontend/templates/: _macros.html  index.html  layout.html
viikko7/kivi-paperi-sakset/tests/: conftest.py  test_entrypoints.py  test_frontend_app_and_main.py  test_frontend_main_runtime.py  test_frontend_routes.py  test_frontend_state.py  test_kps_app.py  test_kps_engine.py  test_kps_logic.py  test_kps_types.py  test_tekoaly.py  test_tekoaly_parannettu.py  test_tuomari.py  test_user_io.py
(+14 files in other folders)
